can load different DRGs

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -4,6 +4,15 @@
 <body>
 	<span>
 		<h1>Medicare Map</h1>
+
+		<div class="formDiv">
+			<form >
+			  <div class="selectTitle">DRG: </div>
+			  <select id="selectDRG"></select>
+			</form>
+		</div>
+
+
 		<span id="instructions">
 			Mouseover and click map for details. Click and drag histograms to crossfilter.
 		</span>
