--- a/webpage/index.html
+++ b/webpage/index.html
@@ -3,11 +3,11 @@
 <link rel="stylesheet" href="filter.css" />
 <body>
 	<span>
-		<h1>Medicare Map</h1>
+		<h1>Medicare Map of</h1>
 
 		<div class="formDiv">
 			<form >
-			  <div class="selectTitle">DRG: </div>
+			  <div class="selectTitle"></div>
 			  <select id="selectDRG"></select>
 			</form>
 		</div>
